--- a/Postcard/Base.lproj/Main.storyboard
+++ b/Postcard/Base.lproj/Main.storyboard
@@ -104,13 +104,22 @@
                                     <action selector="sendMailButtonPressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="En1-9T-qxh"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N8Y-w2-dRL">
+                                <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="29" y="145" width="220" height="25"/>
+                                </variation>
+                            </label>
                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jgY-f9-ymn">
                                 <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="29" y="90" width="220" height="59"/>
+                                    <rect key="frame" x="29" y="108" width="220" height="29"/>
                                 </variation>
                             </label>
                         </subviews>
@@ -121,6 +130,7 @@
                                 <exclude reference="RVe-5B-7r3"/>
                                 <exclude reference="mH5-bl-QBL"/>
                                 <exclude reference="Akl-xX-GpA"/>
+                                <exclude reference="N8Y-w2-dRL"/>
                                 <exclude reference="jgY-f9-ymn"/>
                             </mask>
                         </variation>
@@ -130,6 +140,7 @@
                                 <include reference="RVe-5B-7r3"/>
                                 <include reference="mH5-bl-QBL"/>
                                 <include reference="Akl-xX-GpA"/>
+                                <include reference="N8Y-w2-dRL"/>
                                 <include reference="jgY-f9-ymn"/>
                             </mask>
                         </variation>
@@ -139,6 +150,7 @@
                         <outlet property="enterNameTextField" destination="RVe-5B-7r3" id="h02-Jg-G9d"/>
                         <outlet property="mailButton" destination="Akl-xX-GpA" id="bBq-Sx-CXf"/>
                         <outlet property="messageLabel" destination="jgY-f9-ymn" id="DVx-fB-vdr"/>
+                        <outlet property="nameLabel" destination="N8Y-w2-dRL" id="T27-ng-PQu"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
